# RockPiFlight

./: .gitmodules  APMconfig copy.json  APMconfig.json  CMakeLists.txt  README.md  cccccccc  cccccccc.pub  flight  main.cpp
data/: example.txt
src/: BaroDevice.hpp  CMakeLists.txt  FlowController.hpp  RockPiAPM.cpp  RockPiAPM.hpp
src/BMP280/: BMP280.hpp
src/CONTROL/: control.cpp  control.hpp
src/MPU6500/: MPU6500.hpp  Quaternion.hpp
src/PAC9685/: pac.hpp
src/PCA9685/: pca9685.hpp
src/SPI/: LinuxSPI.hpp
src/SYS/: sys.hpp
src/UART/: CRSFUartRC.hpp  uart.hpp
src/_thirdparty/: CMakeLists.txt  ESCGenerator.hpp  FlowController.hpp
src/_thirdparty/PCA9685/: pca9685.hpp
src/_thirdparty/RaspberryPiBARO/src/BMP280/: BMP280.hpp
src/_thirdparty/RockPiRC/: CMakeLists.txt  README.md  main.cpp
src/_thirdparty/RockPiRC/src/M10QGPS/: CMakeLists.txt  M10QGPS.cpp  M10QGPS.hpp
src/_thirdparty/RockPiRC/src/QMC5883/: CMakeLists.txt  QMC5883.cpp  QMC5883.hpp
src/control/: control.hpp
src/pid/: pid.cpp  pid.hpp
